src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Contact_Role_Other__c</fullName>
        <description>Free text field to be used to enter the value of a role that is not in the Contact Role picklist</description>
        <inlineHelpText>Only to be used when the Contact Role value is outside of the Contact Role picklist.</inlineHelpText>
        <label>Contact Role Other</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreK_and_K_Teacher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PreK and K Teacher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X10th_Grade_Teacher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>10th Grade Teacher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X11th_Grade_Teacher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>11th Grade Teacher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X12th_Grade_Teacher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>12th Grade Teacher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1st_Grade_Teacher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1st Grade Teacher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2nd_Grade_Teacher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2nd Grade Teacher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X3rd_Grade_Teacher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>3rd Grade Teacher</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>